2009-08-07 23:00 plcl

    * fix for bug #2795019

2009-05-18 12:00 plcl

    * feature Request #2792930

2009-02-08 23:00 plcl

    * Version string 0.9.1cvs
    * new configuration option: Styled Knobs

2008-12-29 00:00 plcl

	* Version 0.9.0

2008-11-23 00:00 plcl

	* Converted to KDE4/Qt4

2008-03-24 00:00 plcl

	* Fix the crash at startup when ALSA is not loaded
	* Documentation updates
	* Version 0.8.2

2008-03-21 00:00 plcl

	* Fix a compilation error using GCC 4.

	* Fix MIDI output for QSynth/Fluidsynth and other soft synths. 
	  It uses longer (configurable) durations, or even avoid using  
	  note off events entirely.

	* Schedule always one bar ahead of current time, to avoid the  
	  nasty little gaps between patterns.

	* Version 0.8.1

2005-06-20 21:17  plcl

	* Implemented double click event handler, changing tempo as 
	  suggested by Chris.

2005-06-12 23:51  plcl

	* Fix a typo. Thanks to Chris Cannam.

2005-04-25 23:41  plcl

	* updated version number

2005-04-25 23:32  plcl

	* removed some unneeded files

2005-04-25 23:25  plcl

	* minor changes

2005-04-25 23:11  plcl

	* more .cvsignore stuff

2005-04-25 23:10  plcl

	* .cvsignore files updated

2005-04-25 23:09  plcl

	* minor changes

2005-04-25 23:08  plcl

	* autosave settings (window size...) * apply tempo/resolution
	  changes after config. dialog accept changes

2005-04-23 22:00  plcl

	* bug in sequencerthread: set_program event must be direct.

2005-04-19 22:53  plcl

	* build system update

2005-04-19 22:31  plcl

	* documentation update

2005-04-16 23:22  plcl

	* more files to ignore

2005-04-16 23:21  plcl

	* new DCOP interface commands: setTempo and setTimeSignature

2005-04-04 23:27  plcl

	* several unneeded files removed

2005-04-04 23:21  plcl

	* Documentation updated

2005-04-04 23:21  plcl

	* Spanish translation updated

2005-04-04 23:20  plcl

	* User interface updates * version number raised

2005-04-03 03:11  plcl

	* Configuration option to reconnect the input port
