@@ -1,3 +1,7 @@
+2009-08-11 17:30 plcl
+
+    * synchronize with current aseqmm tree
+
 2009-08-07 23:00 plcl
 
     * fix for bug #2795019
